# komarubrowser

./: .bazelrc  .editorconfig  .gitignore  BUILD  MODULE.bazel  README.md  bazel-bin  bazel-komarubrowser  bazel-out  bazel-testlogs  db_connections.json  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tools.lock.json  tsconfig.json
forgemod/: build.gradle  gradle.properties
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/lib/data/: common.ts  ingredient.ts  ingredientStore.svelte.ts  recipe.ts  recipeStore.svelte.ts
frontend/src/lib/store/: ingStore.svelte.ts
frontend/src/lib/types/: energyTier.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/ingredients/: +page.svelte  columns.ts  data-table.svelte
frontend/src/routes/payments/: +page.svelte  columns.ts
frontend/src/routes/recipes/: +page.svelte  RecipeIngredientList.svelte
minecraft/forgemod/: .gitignore  gregtech_api_export_fields.md  kls_database.db  mise.toml
minecraft/star_t/: .gitignore  dump_jsons.sh  mise.toml
mise-tasks/: assets_minify.sh
mise-tasks/assets/: extract.sh  manifest.py  minify.sh
scripts/: extract_assets.sh  run_star_t.sh  validate_ingredient_dump.sh
ts/common/tables/: BUILD  index.ts  manifest.ts  recipe.ts
ts/common/types/: BUILD  index.ts  ingredient.ts  recipe.ts
ts/extractor/: BUILD  package.json  tsconfig.json
ts/extractor/db/: BUILD  database.ts  main.ts  manifest.ts
ts/extractor/pngs/: BUILD  main.ts
ts/extractor/utils/: BUILD  utils.ts
ts/test/a/: BUILD
ts/test/b/: BUILD  b.ts
(+24 files in other folders)
